proxy/traefik/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fallback-maintenance
  namespace: traefik
spec:
  errors:
    query: "/maintenance"
    status:
      - "500-599"
    service:
      name: fallback
      port: 3355
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fallback-errors
  namespace: traefik
spec:
  errors:
    query: "/"
    status:
      - "400-499"
    service:
      name: fallback
      port: 3355
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dev-auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dev-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-basic-auth
