proxy/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    app: traefik
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
    - protocol: TCP
      port: 8082
      name: metrics
      targetPort: 8082
    - protocol: TCP
      port: 8083
      name: ping
      targetPort: 8083
