proxy/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dahsboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`proxy.arthurdanjou.fr`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-fallback
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      services:
      - name: fallback
        port: 3355
      middlewares:
        - name: traefik-fallback-errors@kubernetescrd
        - name: traefik-fallback-maintenance@kubernetescrd
